# hed-python

./: .codeclimate.yml  .codespellrc  .coveragerc  .flake8  .gitattributes  .gitignore  .gitmodules  .lycheeignore  BLACK_SETUP_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE_GUIDE.md  lychee.toml  mkdocs.yml  pyproject.toml  qlty.toml  readthedocs.yml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  setup_temp.cfg  temp.py
.context/: ideas.md  plan.md  research.md  scratch_history.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: black.yaml  ci.yaml  ci_cov.yaml  ci_windows.yaml  claude-code-review.yml  claude.yml  codespell.yaml  docs.yaml  docs.yml  links.yaml  links.yml  mdformat.yaml  mdformat.yml  notebook_tests.yaml  ruff.yaml  spec_tests.yaml  test_installer.yaml  typos.yaml  update_test_schemas.yml
.rules/: ci_cd.md  code_review.md  git.md  python.md  testing.md
benchmarks/: data_generator.py  report.py  search_benchmark.py
benchmarks/results/: benchmark_20260407_103440.json  benchmark_20260407_103440_report.md
docs/: Deployment.md  api.rst  conf.py  index.md  index.rst  introduction.md  overview.md  requirements.txt  search_details.md  search_implementation.md  user_guide.md
docs/_static/: custom.css  gh_icon_fix.js
docs/_templates/: base.html  quicklinks.html
docs/api/: errors.md  errors.rst  index.md  index.rst  models.md  models.rst  schema.md  schema.rst  tools.md  tools.rst  validator.md  validator.rst
docs/log/: tmp.txt
docs/saved_not_used_yet/: Deployment.md  Documentation.md
docs/source/: 01_Introduction.md  02_Terminology.md  Overview.md  api.rst  api1.rst  api2.rst  conf.py  hed.errors.rst  hed.models.rst  hed.rst  hed.schema.fileio.rst  hed.schema.io.rst  hed.schema.rst  hed.tools.bids.rst  hed.tools.rst  hed.tools.summaries.rst  hed.util.rst  hed.validator.rst  hedmodules.rst  hedweb.constants.rst  hedweb.rst  index.rst  introduction.rst  modules.rst  user_guide.rst  webmodules.rst
examples/: README.md  extract_json_template.ipynb  find_event_combinations.ipynb  merge_spreadsheet_into_sidecar.ipynb  sidecar_to_spreadsheet.ipynb  summarize_events.ipynb  validate_bids_dataset.ipynb  validate_bids_dataset_nondefault.ipynb  validate_bids_dataset_with_libraries.ipynb  validate_bids_datasets.ipynb
hed/: __init__.py  _version.py
hed/cli/: __init__.py  cli.py  cmdtest.py  docker_file
hed/errors/: __init__.py  error_messages.py  error_reporter.py  error_types.py  exceptions.py  known_error_codes.py  schema_error_messages.py
hed/models/: __init__.py  base_input.py  basic_search.py  basic_search_util.py  column_mapper.py  column_metadata.py  def_dict.py  def_expand_gather.py  def_mapper.py  definition_dict.py  definition_entry.py  df_util.py  events_input.py  expression_parser.py  hed_group.py  hed_group_base.py  hed_input.py  hed_ops.py  hed_string.py  hed_string_comb.py  hed_string_group.py  hed_tag.py  indexed_df.py  model_constants.py  onset_mapper.py  onset_mapper_hedops.py  query_expressions.py  query_handler.py  query_service.py  query_util.py  schema_lookup.py  sidecar.py  sidecar_base.py  spreadsheet_input.py  string_search.py  string_util.py  tabular_input.py  tabular_input_temp.py  timeseries_input.py
hed/schema/: __init__.py  hed_cache.py  hed_cache_lock.py  hed_schema.py  hed_schema_base.py  hed_schema_constants.py  hed_schema_df_constants.py  hed_schema_entry.py  hed_schema_group.py  hed_schema_io.py  hed_schema_section.py  schema_attribute_validator_hed_id.py  schema_attribute_validators.py  schema_compare.py  schema_comparer.py  schema_compliance.py  schema_compliance_old.py  schema_header_util.py  schema_validation_util.py  schema_validation_util_deprecated.py  schema_version_manifest.py
hed/scripts/: __init__.py  add_hed_ids.py  check_schema_loading.py  convert_and_update_schema.py  create_ontology.py  extract_tabular_summary.py  hed_convert_schema.py  hed_extract_bids_sidecar.py  hed_script_util.py  hed_validator.py  schema_script_util.py  script_util.py  script_utils.py  validate_bids.py  validate_hed_sidecar.py  validate_hed_string.py  validate_hed_tabular.py  validate_schemas.py
hed/tools/: __init__.py  hed_logger.py
hed/util/: __init__.py  data_util.py  file_util.py  io_util.py
hed/validator/: __init__.py  def_validator.py  hed_validator.py  (+8 more)
hedanalysis/: LICENSE  README.md
hedcode/: .dockerignore  README.md  requirements.txt  setup.py
hedconversion/: .gitignore  LICENSE  README.md  setup.py
hedemail/: README.md  config.py  run_hedconversion.py  setup.py
hedemailer/: README.md  config.py  requirements.txt  run_hedconversion.py
hedexamples/: .coveragerc  README.md  requirements.txt
hedschema/: README.md
hedtools/: .coveragerc  .gitignore  README.md  conda_build_info.txt  meta.yaml  requirements.txt  requirements_old.txt  setup.py
hedvalidation/: .gitignore  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.py
hedweb/: README.md  config.py  config_template.py  requirements.txt  setup.py
hedwebconverter/: README.md  requirements.txt  setup.py
hedwebschema/: README.md  config.py  requirements.txt  setup.py
js_translation_python/: traslation.py
spec_tests/: README.md  __init__.py  _debug_dep_tests.py  check_setup.py  test_bids_datasets.py  test_errors.py  test_hed_cache.py  test_loading_schemas.py  test_sidecar.json  try_loading_all_schemas.py  validate_bids.py
temp_test_output/: temp_test_output_AnnotationProperty.tsv  temp_test_output_AnnotationPropertyExternal.tsv  temp_test_output_AttributeProperty.tsv  temp_test_output_ObjectProperty.tsv  temp_test_output_Prefixes.tsv  temp_test_output_Sources.tsv  temp_test_output_Structure.tsv  temp_test_output_Tag.tsv  temp_test_output_Unit.tsv  temp_test_output_UnitClass.tsv  temp_test_output_UnitModifier.tsv  temp_test_output_ValueClass.tsv
tests/: test_cli_parameter_parity.py  test_notebooks.py  test_pandas3_compat.py
webinterface/: config.py
webtools/: .coveragerc  .gitignore  LICENSE  README.md  config_template.py  requirements.txt  setup.py
(+1985 files in other folders)
