[metadata]
name = hedtools
author = VisLab, Ian Callanan, Jeremy Cockfield, Alexander Jones, Owen Winterberg, Kay Robbins
author_email = Kay.Robbins@utsa.edu
description = Utilities for converting among different representations of the HED
              (Hierarchical Event Descriptor) specification.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hed-standard/hed-python/
# project_urls =
#     Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent



[options]
package_dir =
    = .
packages = find_namespace:
python_requires = >=3.7
install_requires =
    openpyxl
    defusedxml
    et-xmlfile
    inflect
    jdcal
    numpy
    openpyxl
    pandas
    portalocker
    python-dateutil
    pytz
    semantic-version
    six
    Werkzeug


[options.packages.find]
include = hed*

[versioneer]
VCS = git
style = pep440
versionfile_source = hed/_version.py
versionfile_build = hed/_version.py
tag_prefix =
parentdir_prefix = hedtools-