[metadata]
name = hedtools
author = VisLab, Ian Callanan, Jeremy Cockfield, Alexander Jones, Owen Winterberg, Kay Robbins
author_email = Kay.Robbins@utsa.edu
description = HED validation, summary, and analysis tools.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hed-standard/hed-python/
# project_urls =
bug tracker = https://github.com/hed-standard/hed-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent



[options]
package_dir =
    = .
packages = find_namespace:
python_requires = >=3.7
install_requires =
    defusedxml
    et-xmlfile
    inflect
    jdcal
    numpy
    openpyxl
    pandas
    portalocker
    python-dateutil
    pytz
    rdflib
    semantic-version
    six


[options.packages.find]
include = hed*

[options.package_data]
# include the schemas in the installed package
hed = schema/schema_data/*.xml

[options.entry_points]
console_scripts =
    run_remodel=hed.tools.remodeling.cli.run_remodel:main
    run_remodel_backup=hed.tools.remodeling.cli.run_remodel_backup:main
    run_remodel_restore=hed.tools.remodeling.cli.run_remodel_restore:main

[versioneer]
VCS = git
style = pep440
versionfile_source = hed/_version.py
versionfile_build = hed/_version.py
tag_prefix =
parentdir_prefix = hedtools-
